fix(releng): Add --add-opens JVM options